Always show a transparent border to avoid icon jumps

--- a/res/css/views/voip/_VideoFeed.scss
+++ b/res/css/views/voip/_VideoFeed.scss
@@ -18,6 +18,7 @@ limitations under the License.
     overflow: hidden;
     position: relative;
     box-sizing: border-box;
+    border: transparent 2px solid;
 
     &.mx_VideoFeed_voice {
         background-color: $inverted-bg-color;
